--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -23,8 +23,8 @@
   <!-- uncomment to enable plugin in all products
   <depends>com.intellij.modules.lang</depends>
   -->
-
   <extensions defaultExtensionNs="com.intellij">
+    <lang.parserDefinition language="Jsonnet" implementationClass="com.jsonnetplugin.JsonnetParserDefinition"/>
     <fileTypeFactory implementation="com.jsonnetplugin.JsonnetFileTypeFactory"/>
   </extensions>
 
