--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -30,6 +30,7 @@
     <completion.contributor language="Jsonnet" implementationClass="com.jsonnetplugin.JsonnetCompletionContributor"/>
     <lang.foldingBuilder language="Jsonnet" implementationClass="com.jsonnetplugin.JsonnetFoldingBuilder"/>
     <psi.referenceContributor implementation="com.jsonnetplugin.JsonnetReferenceContributor"/>
+    <annotator language="Jsonnet" implementationClass="com.jsonnetplugin.JsonnetAnnotator"/>
   </extensions>
 
   <actions>
