Add a trivial PairedBraceMatcher to allow simple brace/bracket/paren highlighting.
Not entirely sure what the `structural` boolean argument to `BracePair` does, but for now I just copy what the intellij-scala folks do in https://github.com/JetBrains/intellij-scala/blob/idea201.x/scala/scala-impl/src/org/jetbrains/plugins/scala/highlighter/ScalaBraceMatcher.java and only set it to `true` for curly braces

For now I just leave `isPairedBracesAllowedBeforeType` hardcoded to `false`, since it'll take more effort to come up with a proper heuristic that doesn't get too annoying. Empirically IntelliJ seems to still auto-pair braces/brackets/parens when opened at the end of the file, which seems like a reasonable start.

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -31,6 +31,7 @@
     <lang.foldingBuilder language="Jsonnet" implementationClass="com.jsonnetplugin.JsonnetFoldingBuilder"/>
     <psi.referenceContributor implementation="com.jsonnetplugin.JsonnetReferenceContributor"/>
     <annotator language="Jsonnet" implementationClass="com.jsonnetplugin.JsonnetAnnotator"/>
+    <lang.braceMatcher language="Jsonnet" implementationClass="com.jsonnetplugin.JsonnetBraceMatcher"/>
   </extensions>
 
   <actions>
