--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,6 @@
-distributionBase=GRADLE_USER_HOME
-distributionPath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.2.1-bin.zip
+#Sun Mar 01 13:30:32 EST 2020	
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.2.1-all.zip	
+distributionBase=GRADLE_USER_HOME	distributionBase=GRADLE_USER_HOME
+distributionPath=wrapper/dists	distributionPath=wrapper/dists
+zipStorePath=wrapper/dists	distributionUrl=https\://services.gradle.org/distributions/gradle-6.2.1-bin.zip
 zipStoreBase=GRADLE_USER_HOME
-zipStorePath=wrapper/dists
