--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -17,8 +17,7 @@
         <lang.parserDefinition language="Jsonnet" implementationClass="com.jsonnetplugin.JsonnetParserDefinition"/>
         <lang.syntaxHighlighterFactory language="Jsonnet"
                                        implementationClass="com.jsonnetplugin.JsonnetSyntaxHighlighterFactory"/>
-        <fileType name="Jsonnet file" implementationClass="com.jsonnetplugin.JsonnetFileType"
-                  fieldName="INSTANCE" language="Jsonnet" extensions="jsonnet;libsonnet" patterns="*.jsonnet.TEMPLATE"/>
+        <fileTypeFactory implementation="com.jsonnetplugin.JsonnetFileTypeFactory"/>
         <lang.commenter language="Jsonnet" implementationClass="com.jsonnetplugin.JsonnetCommenter"/>
         <completion.contributor language="Jsonnet"
                                 implementationClass="com.jsonnetplugin.JsonnetCompletionContributor"/>
