--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -17,7 +17,8 @@
         <lang.parserDefinition language="Jsonnet" implementationClass="com.jsonnetplugin.JsonnetParserDefinition"/>
         <lang.syntaxHighlighterFactory language="Jsonnet"
                                        implementationClass="com.jsonnetplugin.JsonnetSyntaxHighlighterFactory"/>
-        <fileTypeFactory implementation="com.jsonnetplugin.JsonnetFileTypeFactory"/>
+        <fileType name="Jsonnet file" language="Jsonnet" extensions="jsonnet;libsonnet" patterns="*.jsonnet.TEMPLATE"
+                  implementationClass="com.jsonnetplugin.JsonnetFileType"/>
         <lang.commenter language="Jsonnet" implementationClass="com.jsonnetplugin.JsonnetCommenter"/>
         <completion.contributor language="Jsonnet"
                                 implementationClass="com.jsonnetplugin.JsonnetCompletionContributor"/>
